--- a/frontend/daftgila/web/templates/dashboard.html
+++ b/frontend/daftgila/web/templates/dashboard.html
@@ -23,14 +23,14 @@
                     <div class="col-md-6">
                         <h5>Available Actions</h5>
                         <div class="d-grid gap-2">
-                            <a href="{{ url_for('account') }}" class="btn btn-outline-info">
+                            <a href="{{ url_for('user.account') }}" class="btn btn-outline-info">
                                 <i class="fas fa-user-cog me-2"></i>Manage Account
                             </a>
-                            <a href="{{ url_for('hello') }}" class="btn btn-outline-primary">
+                            <a href="{{ url_for('dashboard.hello') }}" class="btn btn-outline-primary">
                                 <i class="fas fa-hand-wave me-2"></i>Test Hello Endpoint
                             </a>
                             {% if session.is_admin %}
-                            <a href="{{ url_for('admin') }}" class="btn btn-outline-success">
+                            <a href="{{ url_for('admin.admin') }}" class="btn btn-outline-success">
                                 <i class="fas fa-users-cog me-2"></i>Manage Users
                             </a>
                             {% endif %}
