--- a/frontend/daftgila/web/templates/gssapi_realms.html
+++ b/frontend/daftgila/web/templates/gssapi_realms.html
@@ -85,7 +85,7 @@
                         <i class="fas fa-shield-alt me-2"></i>
                         GSSAPI Realm Configuration
                     </h5>
-                    <a href="{{ url_for('admin.admin') }}" class="btn btn-outline-secondary btn-sm">
+                    <a href="{{ url_for('admin.admin_dashboard') }}" class="btn btn-outline-secondary btn-sm">
                         <i class="fas fa-arrow-left me-2"></i>Back to Admin
                     </a>
                 </div>
