--- a/frontend/daftgila/web/templates/base.html
+++ b/frontend/daftgila/web/templates/base.html
@@ -33,7 +33,7 @@
                     </li>
                     {% if current_user.is_admin %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.admin') }}">Admin</a>
+                        <a class="nav-link" href="{{ url_for('admin.admin_dashboard') }}">Admin</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('admin.jwt_sessions') }}">JWT Sessions</a>
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="{{ url_for('admin.oauth_providers') }}">OAuth Providers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.config') }}">Configuration</a>
+                        <a class="nav-link" href="{{ url_for('admin.config_management') }}">Configuration</a>
                     </li>
                     {% endif %}
                 </ul>
