--- a/frontend/daftgila/web/templates/dashboard.html
+++ b/frontend/daftgila/web/templates/dashboard.html
@@ -30,7 +30,7 @@
                                 <i class="fas fa-hand-wave me-2"></i>Test Hello Endpoint
                             </a>
                             {% if session.is_admin %}
-                            <a href="{{ url_for('admin.admin') }}" class="btn btn-outline-success">
+                            <a href="{{ url_for('admin.admin_dashboard') }}" class="btn btn-outline-success">
                                 <i class="fas fa-users-cog me-2"></i>Manage Users
                             </a>
                             {% endif %}
