--- a/frontend/daftgila/web/templates/base.html
+++ b/frontend/daftgila/web/templates/base.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="{{ url_for('admin.oauth_providers') }}">OAuth Providers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.config_management') }}">Configuration</a>
+                        <a class="nav-link" href="{{ url_for('config.config_management') }}">Configuration</a>
                     </li>
                     {% endif %}
                 </ul>
